--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-        "start": "node backend/index.js",
+        "start": "node index.js",
         "server": "nodemon backend/index.js",
          "client": "npm run dev --prefix frontend"
     },
