--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "node index.js",
         "server": "nodemon backend/index.js",
-         "client": "npm run dev --prefix frontend"
+        "client": "npm run dev --prefix frontend"
     },
     "keywords": [],
     "author": "",
@@ -20,7 +20,8 @@
         "express-async-handler": "^1.2.0",
         "express-validator": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.5.1"
+        "mongoose": "^8.5.1",
+        "stripe": "^16.8.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.4"
